--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -35,6 +35,11 @@
       </div>
 
       <div class="form-group">
+        <%= f.label :display_picture %><br />
+        <%= file_field_tag :display_picture, class: "display_picture", user_id: resource.id %>
+      </div>
+
+      <div class="form-group">
         <%= f.submit "Update", class: 'btn btn-lg btn-block btn-primary' %>
       </div>
     <% end %>
