--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,28 +50,71 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-    <div class="fluid-container" style="margin-top: 70px">
-      <div class="row">
-        <div class="col-sm-2" style="position: fixed; top: 70px; left: 0;">
+    <div class="container" style="padding-top: 100px;">
+      <div class="messaging">
+        <div class="inbox_msg">
           <% if user_signed_in? %>
-            <h5>Chatrooms</h5>
-            <ul>
-              <% current_user.chatrooms.public_channels.each do |chatroom| %>
-                <li><%= link_to chatroom.name, chatroom, data: {behavior: "chatroom-link", chatroom_id: chatroom.id} %></li>
-              <% end %>
-            </ul>
-
-            <h5>Users</h5>
-            <ul>
-              <% (User.all - [current_user]).each do |user| %>
-                <li><%= link_to user.username, direct_message_path(user.id), data: {behavior: "chatroom-link", chatroom_id: Chatroom.direct_message_for_users([current_user, user]).id } %></li>
-              <% end %>
-            </ul>
+            <div class="inbox_people">
+              <div class="headind_srch">
+                <div class="recent_heading">
+                  <h4>Recent</h4>
+                </div>
+                <div class="srch_bar">
+                  <div class="stylish-input-group">
+                    <input type="text" class="search-bar"  placeholder="Search" >
+                    <span class="input-group-addon">
+                    <button type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
+                    </span> </div>
+                </div>
+              </div>
+              <div class="inbox_chat">
+                <% current_user.chatrooms.public_channels.each do |chatroom| %>
+                  <div class="chat_list">
+                    <div class="chat_people">
+                      <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                      <div class="chat_ib">
+                        <h5><%= link_to chatroom.name, chatroom, data: {behavior: "chatroom-link", chatroom_id: chatroom.id} %>
+                        <% if chatroom.messages.present? %>
+                          <span class="chat_date"><%= chat_date(chatroom)%></span>
+                          <span class='badge' style= "display: none;">1</span></h5>
+                          <p><%=chatroom.messages.last.body%></p>
+                        <% else %>
+                          <p>Start your conversation</p>
+                        <% end %>
+                      </div>
+                    </div>
+                  </div>
+                <% end %>
+              </div>
+              <div class="inbox_chat">
+                <% (User.all - [current_user]).each do |user| %>
+                  <div class="chat_list">
+                    <div class="chat_people">
+                      <div class="chat_img">
+                      <% if user.display_picture.present? %>
+                        <% image_tag user.display_picture.image.url, class: "user_dp"%>
+                      <% else %>
+                        <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil">
+                      <% end %>
+                      </div>
+                      <div class="chat_ib">
+                      <% user_chatroom = Chatroom.direct_message_for_users([current_user, user]) %>
+                        <h5><%= link_to user.username, direct_message_path(user.id), data: {behavior: "chatroom-link", chatroom_id: user_chatroom.id } %>
+                        <% if user_chatroom.messages.present? %>
+                          <span class="chat_date"><%= chat_date(user_chatroom)%></span>
+                          <span class='badge' style= "display: none;">1</span></h5>
+                          <p><%=user_chatroom.messages.last.body%></p>
+                        <% else %>
+                          <p>Start your conversation</p>
+                        <% end %>
+                      </div>
+                    </div>
+                  </div>
+                <% end %>
+              </div>
+            </div>
           <% end %>
-        </div>
-
-        <div class="col-sm-10 col-sm-offset-2">
-          <%= yield %>
+          <%=yield%>
         </div>
       </div>
     </div>
