--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -35,8 +35,8 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :display_picture %><br />
-        <%= file_field_tag :display_picture, class: "display_picture", user_id: resource.id %>
+        <%= f.label :image %><br />
+        <%= file_field_tag :image, class: "display_picture", user_id: resource.id %>
       </div>
 
       <div class="form-group">
